--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <div class="half"><h1>Dream project</h1>
     <h3>covered by Amir Hamza</h3>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni vitae cum distinctio molestias reprehenderit quod error accusamus debitis dolore rerum.</p> 
-<a class="button" target="blank" href="">Download Resume</a></div></section>
+<a class="button" target="blank" href="">Download Resume</a></div>
+</section>
+<br>
+<h1>Exprience</h1>
+<br>
+<section>
+  <div  id="exprience exprience1" class="half"><h2>Pro level devolopet</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus fugiat velit optio culpa provident tempore ad id omnis dolorem!</p></div>
+  <div id="exprience exprience2" class="half"><h2>Bot devoloper</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aliquam iusto maiores nam quis distinctio quam possimus minus harum aspernatur.</p></div>
+</section>
+
 </body>
 </html>
