--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <h1>Exprience</h1>
 <br>
 <section>
-  <div  id="exprience exprience1" class="half"><h2>Pro level devolopet</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus fugiat velit optio culpa provident tempore ad id omnis dolorem!</p></div>
-  <div id="exprience exprience2" class="half"><h2>Bot devoloper</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aliquam iusto maiores nam quis distinctio quam possimus minus harum aspernatur.</p></div>
+  <div  id="exprience" class="half"><h2>Pro level devolopet</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita possimus fugiat velit optio culpa provident tempore ad id omnis dolorem!</p></div>
+  <div id="exprience1" class="half"><h2>Bot devoloper</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit aliquam iusto maiores nam quis distinctio quam possimus minus harum aspernatur.</p></div>
 </section>
 
 </body>
